# salecast

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO.md  celery_app.py  docker-compose.yml  pyproject.toml  ruff.toml  run.example.sh
.claude/: settings.json
.streamlit/: config.toml
api/: database.py  main.py  models.py  storage.py
api/routers/: automl.py  clustering.py  ensemble.py  forecast.py  jobs.py  panels.py  projects.py
app/: api_client.py  main.py  state.py
app/pages/: quality.py  upload.py
app/views/: automl.py  clustering.py  cross_validation.py  ensemble.py  forecast.py  quality.py  upload.py
examples/: automl_full_experiment.yaml  convert_store_item.py  gui_data_example.csv  gui_data_example_with_filtration.csv  store_item_demand (per shop).csv
notebooks/: filtration_overview.ipynb
notebooks/niches/: 0_get_mirrors_characteristics.ipynb  1_get_mirrors_ts.ipynb  2_concat_features.ipynb  2_concat_features_and_filtration.ipynb  3_clusterize.ipynb  5_cb_predictions _for_clusters.ipynb  5_cb_predictions _ood_filtration.ipynb  5_cb_predictions.ipynb  5_cb_predictions_with_clusters.ipynb  5_seasonal_naive_predictions.ipynb  6_automl.ipynb
requirements/: base.txt  neural.txt
scripts/: check_automl.py  check_filtration.py  generate_sample_data.py  prepare_wb_mirrors.py
scripts/data/: sample_ts.csv
src/: classifical_features.py  clustering.py  custom_types.py  data_processing.py  ensemble.py  evaluation.py  filtration.py  model_selection.py  mstl_features.py  ts_features.py
src/automl/: __init__.py  base.py  config.py  hyperopt.py  selector.py  ts_utils.py
src/catboost_utilities/: __init__.py  evaluate.py  train.py
src/configs/: settings.py
src/diagnostics/: __init__.py  checks.py  config.py  runner.py
src/scripts/: export_cv_charts.py  export_prediction_charts.py  generate_sample_data.py  prepare_wb_mirrors.py
src/seasonal_naive_utilities/: __init__.py  evaluate.py  seasonal_naive_model.py  train.py
src/utilities/: __init__.py  utilities.py
src/visualization/: __init__.py  clusterization.py  visualization.py
tests/: test_classifical_features.py  test_clustering.py  test_data_processing.py  test_diagnostics.py  test_ensemble.py  test_evaluation.py  test_feature_boundaries.py  test_feature_functions.py  test_feature_quality.py  test_filtration.py  test_model_selection.py  test_mstl_features.py
tests/scripts/: test_automl_e2e.py
tests/test_automl/: conftest.py  test_catboost_clustered_model.py  test_catboost_model.py  test_chronos_model.py  test_hyperopt.py  test_seasonal_naive_model.py  test_selector.py  test_statsforecast_model.py  test_ts2vec_clustered_model.py  test_ts2vec_model.py  test_ts_utils.py
worker/tasks/: automl.py  clustering.py  cross_validation.py  ensemble.py  forecast.py  run_automl.py
(+16 files in other folders)
